--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
   <link href="https://fonts.googleapis.com/css?family=Montserrat:300" rel="stylesheet" type="text/css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="assets/css/toastr.css">
 </head>
 
 <body>
